# Zertan

./: .gitignore  AGENTS.md  README.md  TODO  release_updates.md
.github/workflows/: ci.yml  release-desktop.yml  release-image.yml
app/: README.md  requirements.txt
app/web_server/: app_route_support.py  app_routes.py  main.py  runtime_config.py  server.py  storage_paths.py  wsgi.py
deploy/src/client/src-tauri/: Cargo.toml  tauri.conf.json
deploy/src/client/src-tauri/capabilities/: default.json  workspace.json
deploy/src/client/src-tauri/icons/: icon.icns
deploy/src/client/src-tauri/src/: lib.rs  main.rs
lite/: README.md
scripts/: generate_synthetic_exam.py  seed_mock_global_stats.py
tests/: README.md  __init__.py  all_tests.py  generate_synthetic_exam.py  seed_mock_global_stats.py  test_admin_api.py  test_api_manager.py  test_app_routes.py  test_attempt_service.py  test_build_release.py  test_client_build_release.py  test_connection_info_service.py  test_database_runtime.py  test_desktop_launcher.py  test_exam_scope_rules.py  test_global_exam_permissions.py  test_infrastructure_lifecycle.py  test_live_exam_service.py  test_live_exams_api.py  test_log_registry.py  test_package_service.py  test_question_logic.py  test_question_payload_parser.py  test_server_console_ui.py  test_user_manager.py
web_app/: admin.html  catalog.html  dashboard.html  exam_builder.html  exam_detail.html  exam_management.html  exam_runner.html  forbidden.html  login.html  profile.html  question_editor.html  results.html
web_server/: app_routes.py  main.py
(+374 files in other folders)
