[package]
name = "zertan-client"
version = "0.1.0"
description = "Zertan dedicated desktop client"
authors = ["Zertan"]
edition = "2021"

[lib]
name = "zertan_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
